frontend/test/should_pass/reachable2.grg
::g_n:Node;
-::g_e:Edge->;
::g_m:Node;

rule t
{
	n:Node -e:Edge-> m:Node;

	if { reachableEdges(::g_n, Edge).size()!=0 && reachableEdgesIncoming(::g_n, Edge).size()!=0 && reachableEdgesOutgoing(::g_n, Edge).size()!=0; }
	if { reachableEdges(n, Edge).size()!=0 && reachableEdgesIncoming(n, Edge).size()!=0 && reachableEdgesOutgoing(n, Edge).size()!=0; }
	if { reachable(::g_n, Edge).size()!=0 && reachableIncoming(::g_n, Edge).size()!=0 && reachableOutgoing(::g_n, Edge).size()!=0; }
	if { reachable(n, Edge).size()!=0 && reachableIncoming(n, Edge).size()!=0 && reachableOutgoing(n, Edge).size()!=0; }

	if { isReachable(::g_n, ::g_m, Edge) && isReachableIncoming(::g_n, ::g_m, Edge) && isReachableOutgoing(::g_n, ::g_m, Edge); }
	if { isReachable(n, m, Edge) && isReachableIncoming(n, m, Edge) && isReachableOutgoing(n, m, Edge); }
	if { isReachableEdges(::g_n, ::g_e, Edge) && isReachableEdgesIncoming(::g_n, ::g_e, Edge) && isReachableEdgesOutgoing(::g_n, ::g_e, Edge); }
	if { isReachableEdges(n, e, Edge) && isReachableEdgesIncoming(n, e, Edge) && isReachableEdgesOutgoing(n, e, Edge); }
	
	modify {
		def var res:boolean;
		
		eval { yield res = reachableEdges(::g_n, Edge).size()!=0 && reachableEdgesIncoming(::g_n, Edge).size()!=0 && reachableEdgesOutgoing(::g_n, Edge).size()!=0; }
		eval { yield res = reachableEdges(n, Edge).size()!=0 && reachableEdgesIncoming(n, Edge).size()!=0 && reachableEdgesOutgoing(n, Edge).size()!=0; }
		eval { yield res = reachable(::g_n, Edge).size()!=0 && reachableIncoming(::g_n, Edge).size()!=0 && reachableOutgoing(::g_n, Edge).size()!=0; }
		eval { yield res = reachable(n, Edge).size()!=0 && reachableIncoming(n, Edge).size()!=0 && reachableOutgoing(n, Edge).size()!=0; }

		eval { yield res = isReachable(::g_n, ::g_m, Edge) && isReachableIncoming(::g_n, ::g_m, Edge) && isReachableOutgoing(::g_n, ::g_m, Edge); }
		eval { yield res = isReachable(n, m, Edge) && isReachableIncoming(n, m, Edge) && isReachableOutgoing(n, m, Edge); }
		eval { yield res = isReachableEdges(::g_n, ::g_e, Edge) && isReachableEdgesIncoming(::g_n, ::g_e, Edge) && isReachableEdgesOutgoing(::g_n, ::g_e, Edge); }
		eval { yield res = isReachableEdges(n, e, Edge) && isReachableEdgesIncoming(n, e, Edge) && isReachableEdgesOutgoing(n, e, Edge); }
	
/*		
		exec ( { res = reachableEdges(::g_n, Edge).size()!=0 && reachableEdgesIncoming(::g_n, Edge).size()!=0 && reachableEdgesOutgoing(::g_n, Edge).size()!=0; } )
		exec ( { res = reachableEdges(n, Edge).size()!=0 && reachableEdgesIncoming(n, Edge).size()!=0 && reachableEdgesOutgoing(n, Edge).size()!=0; } )
		exec ( { res = reachable(::g_n, Edge).size()!=0 && reachableIncoming(::g_n, Edge).size()!=0 && reachableOutgoing(::g_n, Edge).size()!=0; } )
		exec ( { res = reachable(n, Edge).size()!=0 && reachableIncoming(n, Edge).size()!=0 && reachableOutgoing(n, Edge).size()!=0; } )

		exec ( { res = isReachable(::g_n, ::g_m, Edge) && isReachableIncoming(::g_n, ::g_m, Edge) && isReachableOutgoing(::g_n, ::g_m, Edge); } )
		exec ( { res = isReachable(n, m, Edge) && isReachableIncoming(n, m, Edge) && isReachableOutgoing(n, m, Edge); } )
		exec { { res = isReachableEdges(::g_n, ::g_e, Edge) && isReachableEdgesIncoming(::g_n, ::g_e, Edge) && isReachableEdgesOutgoing(::g_n, ::g_e, Edge); } )
		exec { { res = isReachableEdges(n, e, Edge) && isReachableEdgesIncoming(n, e, Edge) && isReachableEdgesOutgoing(n, e, Edge); } )
*/
	}
}
