frontend/test/should_fail/array_removeIf_exec_graph_element.grg
rule array_removeIf_exec(ref a:array<int>) {
	n:Node;
	modify {
		---
		exec({ aa:array<Edge> = a.removeIf{value:int -> nameof(n) != "$0"} });
	}
}
